# Nanoparticles_app

./: .gitignore  .txt  README.md  app_gui.py  dice_index.py  filters.py  gui_learning_02.py  image_processing.py  image_processing_functions.py  img_fcn.py  img_obj.py  openCV_segmentation_watershed.py  pyproject.toml  scales.json  scikit_image_segmentation_watershed.py  scikit_segment_using_sobel_operator.py  segmantation_with_scikit_image.py  sizes.txt  style.css  try.py  users.csv
data/: json_generator.py  scales.json
data/40nmAuNP/: 40nmAuNP_metadata.json
data/80nmAuNP/: 80nmAuNP_metadata.json  metadata.json
data/A800AuNR/: A800AuNR_metadata.json
data/AuNP20nm/: AuNP20nm_metadata.json  metadata.json
data/AuNP50nm/: AuNP50nm_metadata.json  metadata.json
data/AuNP80nm/: metadata.json
data/AuNR660/: metadata.json
data/images/: scales.json
images/: json_generator.py  scales.json
notebooks/: segmentation_nanorods.ipynb
results/: 40nmAuNP_003.txt  80nmAuNP_003.txt  80nmAuNP_010.txt  A800AuNR_004.txt  A800AuNR_006.txt  A800AuNR_008.txt  AuNP20nm_002.txt  AuNP20nm_004.txt  AuNP50nm_003.txt  AuNP50nm_008.txt  AuNP50nm_009.txt  AuNP80nm_002.txt  AuNP_20nm_001.txt  AuNP_40nm_001.txt  AuNP_40nm_003.txt  AuNP_50nm_001.txt  AuNP_50nm_002.txt  AuNP_80nm_001.txt  AuNR660_009.txt  AuNR_A800nm_001.txt  AuNR_A800nm_002.txt  props.txt
tryouts/: ellipse_detection.py  gui_learning_01.py  hough_transform.py  img_fcn_old.py  img_obj.py  invert_color.py  labeling.py  poznamky.txt  poznamky_02.txt  scikit_image_segmentation_watershed.py
(+8 files in other folders)
