[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Monika"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
opencv-python = "^4.6.0.66"
matplotlib = "^3.6.1"
PyQt6 = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
